--- a/HealthClub/templates/physio-slim/home.html
+++ b/HealthClub/templates/physio-slim/home.html
@@ -37,7 +37,7 @@
 </div>
 
 <div id="contact-us">
-    <div class="contact-us container py-5">
+    <div class="contact-us py-5">
         <div class="row py-5">
             {% for branch in branches %}
             <div class="col text-center">
@@ -54,6 +54,12 @@
             <div class="col-sm text-center">
                <a href="https://www.facebook.com/Physio-slim-1642568222659235/" target="_blank"><i class="fa-brands fa-facebook-f px-2"></i></a>
                <a href="https://instagram.com/physio_slim33?utm_medium=copy_link" target="_blank"><i class="fa-brands fa-instagram px-2"></i></a>
+            </div>
+        </div>
+        <!-- email us -->
+        <div class="text-center py-1"> For queries and concerns
+            <div class="col-sm text-center">
+                <i class="fa-solid fa-envelope px-2"></i> physio.slim2@gmail.com
             </div>
         </div>
     </div>
