--- a/HealthClub/templates/archeive/navbar.html
+++ b/HealthClub/templates/archeive/navbar.html
@@ -166,7 +166,7 @@
 
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item mt-1">
-                    <a class="nav-link" href="{% url 'home' %}"><b>Physio-Slim</b></a>
+                    <a class="nav-link physio" href="{% url 'home' %}"><b>Physio-Slim</b></a>
                 </li>
 
                 <li class="nav-item dropdown mt-1">
