--- a/HealthClub/templates/physio-slim/branch.html
+++ b/HealthClub/templates/physio-slim/branch.html
@@ -67,7 +67,7 @@
                 {% for trainer in trainers %}
                     <div class="col-md-4 col-sm-4 animate-box">
                         <div class="trainer">
-                            <a href="#"><img class="img-responsive" src="{{MEDIA_URL}}/{{trainer.photo}}" alt="trainer"></a>
+                            <a href="#"><img class="img-responsive" src="{{MEDIA_URL}}/{{PersonalTrainer.photo}}" alt="trainer"></a>
                             <div class="title">
                                 <h3><a href="#">{{trainer.name}}</a></h3>
                                 <span>{{trainer.bio}}</span>
@@ -88,7 +88,32 @@
 			</div>
 		</div>
 	</div>
-	
+	<div id="fh5co-pricing">
+		<div class="container">
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<h2>Offers </h2>
+					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="pricing">
+					{% for offer in offers %}
+					<div class="col-md-3 animate-box">
+						<div class="price-box">
+							<h2 class="pricing-plan">{{offer.name}}</h2>
+							<div class="price"><sup class="currency">%</sup>{{ offer.discount}}<small>/month</small></div>
+							<ul class="classes">
+								<li>{{offer.num_of_class}} Cardio Classes</li>
+
+							</ul>
+							<a href="#" class="btn btn-select-plan btn-sm">Select Plan</a>
+						</div>
+					</div>
+					{% endfor %}
+			</div>
+		</div>
+	</div>
 	<div id="fh5co-schedule" class="fh5co-bg" style="background-image: url(images/img_bg_1.jpg);">
 		<div class="container">
 			<div class="row">
@@ -490,87 +515,7 @@
 			</div>
 		</div>
 	</div>
-	<div id="fh5co-pricing">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Pricing Plan</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="pricing">
-					<div class="col-md-3 animate-box">
-						<div class="price-box">
-							<h2 class="pricing-plan">Starter</h2>
-							<div class="price"><sup class="currency">$</sup>9<small>/month</small></div>
-							<ul class="classes">
-								<li>15 Cardio Classes</li>
-								<li class="color">10 Swimming Lesson</li>
-								<li>10 Yoga Classes</li>
-								<li class="color">20 Aerobics</li>
-								<li>10 Zumba Classes</li>
-								<li class="color">5 Massage</li>
-								<li>10 Body Building</li>
-							</ul>
-							<a href="#" class="btn btn-select-plan btn-sm">Select Plan</a>
-						</div>
-					</div>
-
-					<div class="col-md-3 animate-box">
-						<div class="price-box">
-							<h2 class="pricing-plan">Basic</h2>
-							<div class="price"><sup class="currency">$</sup>27<small>/month</small></div>
-							<ul class="classes">
-								<li>15 Cardio Classes</li>
-								<li class="color">10 Swimming Lesson</li>
-								<li>10 Yoga Classes</li>
-								<li class="color">20 Aerobics</li>
-								<li>10 Zumba Classes</li>
-								<li class="color">5 Massage</li>
-								<li>10 Body Building</li>
-							</ul>
-							<a href="#" class="btn btn-select-plan btn-sm">Select Plan</a>
-						</div>
-					</div>
-
-					<div class="col-md-3 animate-box">
-						<div class="price-box popular">
-							<h2 class="pricing-plan pricing-plan-offer">Pro <span>Best Offer</span></h2>
-							<div class="price"><sup class="currency">$</sup>74<small>/month</small></div>
-							<ul class="classes">
-								<li>15 Cardio Classes</li>
-								<li class="color">10 Swimming Lesson</li>
-								<li>10 Yoga Classes</li>
-								<li class="color">20 Aerobics</li>
-								<li>10 Zumba Classes</li>
-								<li class="color">5 Massage</li>
-								<li>10 Body Building</li>
-							</ul>
-							<a href="#" class="btn btn-select-plan btn-sm">Select Plan</a>
-						</div>
-					</div>
-
-					<div class="col-md-3 animate-box">
-						<div class="price-box">
-							<h2 class="pricing-plan">Unlimited</h2>
-							<div class="price"><sup class="currency">$</sup>140<small>/month</small></div>
-							<ul class="classes">
-								<li>15 Cardio Classes</li>
-								<li class="color">10 Swimming Lesson</li>
-								<li>10 Yoga Classes</li>
-								<li class="color">20 Aerobics</li>
-								<li>10 Zumba Classes</li>
-								<li class="color">5 Massage</li>
-								<li>10 Body Building</li>
-							</ul>
-							<a href="#" class="btn btn-select-plan btn-sm">Select Plan</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+	
 
 	<div id="fh5co-gallery">
 		<div class="container">
