--- a/HealthClub/templates/physio-slim/main.html
+++ b/HealthClub/templates/physio-slim/main.html
@@ -109,7 +109,8 @@
 				<div class="col-md-4 fh5co-widget">
 					<h3>A Little About Physio Slim.</h3>
                     <!-- Shadyyyyyyyyyyyyyyyyyyyyyyyyyy -->
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. 
+						Eos cumque dicta adipisci architecto culpa amet.</p>
 					{% if request.user.is_anonymous %}
                     <p><a class="btn btn-primary" href="{% url 'register' %}">Become A Member</a></p>
                     {% endif %}
@@ -151,15 +152,13 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+						<small class="block">&copy; 2022 Physio-Slim. All Rights Reserved.</small> 
+						<!-- <small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small> -->
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
+							<li><a href="https://www.facebook.com/Physio-slim-1642568222659235/" target="_blank"><i class="icon-facebook"></i></a></li>
+							<li><a href="https://instagram.com/physio_slim33?utm_medium=copy_link" target="_blank"><i class="icon-instagram"></i></a></li>
 						</ul>
 					</p>
 				</div>
