--- a/HealthClub/templates/physio-slim/blog.html
+++ b/HealthClub/templates/physio-slim/blog.html
@@ -1,7 +1,7 @@
 {% extends 'physio-slim/main.html' %}
 {% load static %}
 {% block body %}
-	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/img_bg_2.jpg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/HR-Front-Desk-Checking-In.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
