--- a/HealthClub/templates/physio-slim/contact.html
+++ b/HealthClub/templates/physio-slim/contact.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block body %}
 
-	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/img_bg_2.jpg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(https://www.goldsgym.com/clearwater-fl/wp-content/uploads/sites/563/2019/10/HR-Front-Desk-Checking-In.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -10,7 +10,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Contact Us</h1>
-							<h2>Free html5 templates Made by <a href="http://freehtml5.co" target="_blank">freehtml5.co</a></h2>
+							<!-- <h2>Free html5 templates Made by <a href="http://freehtml5.co" target="_blank">freehtml5.co</a></h2> -->
 						</div>
 					</div>
 				</div>
@@ -27,7 +27,7 @@
 				<h2 style="text-align: center;">Contact Information</h2>
 				{% for branch in branches %}
 				<div class="col-md-4 col-md-push-1 animate-box">
-					<div class="fh5co-contact-info">
+					<div class="fh5co-contact-info" style="padding-top: 10%;">
 						<h3>{{branch.name}}</h3>
 						<ul>
 							<li class="address">{{branch.address}}</li>
