--- a/HealthClub/PhysioSlim/static/css/style.css
+++ b/HealthClub/PhysioSlim/static/css/style.css
@@ -582,7 +582,9 @@ h1, h2, h3, h4, h5, h6, figure {
 
 .services {
   padding: 25px;
-  margin-top: -10em;
+  margin-top: 0em;
+  margin-bottom: 1em;
+
   background: #fff;
   -webkit-box-shadow: 0px 10px 23px -10px rgba(0, 0, 0, 0.43);
   -moz-box-shadow: 0px 10px 23px -10px rgba(0, 0, 0, 0.43);
@@ -598,7 +600,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 @media screen and (max-width: 768px) {
   .services {
-    margin-top: 0;
+    margin-top: -10em;
     margin-bottom: 20px;
   }
 }
@@ -609,6 +611,10 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 .services span img {
   width: 60px;
+  margin: 0 auto;
+}
+.services .image {
+  width: 200px;
   margin: 0 auto;
 }
 .services h3 {
