--- a/HealthClub/templates/physio-slim/classes.html
+++ b/HealthClub/templates/physio-slim/classes.html
@@ -11,8 +11,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Fitness Trainer</h1>
-							<h2>Free html5 templates Made by <a href="http://freehtml5.co" target="_blank">freehtml5.co</a></h2>
+							<h1> {{branch}} Classes </h1>
 						</div>
 					</div>
 				</div>
@@ -20,13 +19,12 @@
 		</div>
 	</header>
 
-	
+<!-- 	
 	<div id="fh5co-trainer">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Fitness Expert</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h2>Classes </h2>
 				</div>
 			</div>
 			<div class="row">
@@ -83,8 +81,31 @@
 				</div>
 			</div>
 		</div>
+	</div> -->
+	<div id="fh5co-services" class="fh5co-bg-section">
+		<div class="container">
+
+			<div class="row">
+				{% for class in classes %}
+
+				<div class="col-md-4 text-center animate-box">
+
+					<div class="services">
+						<span><img class="img-responsive image" src="{{MEDIA_URL}}/{{class.photo2}} "  alt="hello"></span>
+                        
+						<h3> {{class.Class}}</h3>
+						
+						<p>{{class.description}}</p>
+					</div>
+
+				</div>
+				{% endfor %}
+
+				
+			</div>
+
+		</div>
 	</div>
-	
 
 	<div id="fh5co-started" class="fh5co-bg" style="background-image: url(images/img_bg_3.jpg);">
 		<div class="overlay"></div>
@@ -96,7 +117,7 @@
 			</div>
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center">
-					<p><a href="#" class="btn btn-default btn-lg">Become a Member</a></p>
+					<p><a href="{% url 'register'  %}" class="btn btn-default btn-lg">Become a Member</a></p>
 				</div>
 			</div>
 		</div>
