--- a/HealthClub/templates/physio-slim/trainers.html
+++ b/HealthClub/templates/physio-slim/trainers.html
@@ -29,12 +29,14 @@
 				</div>
 			</div>
 			<div class="row">
+				{% for trainer in trainers %}
 				<div class="col-md-4 col-sm-4 animate-box">
 					<div class="trainer">
 						<a href="#"><img class="img-responsive" src="images/trainer-1.jpg" alt="trainer"></a>
 						<div class="title">
-							<h3><a href="#">Angel Adams</a></h3>
-							<span>Dance Expert</span>
+							<h3><a href="#">{{trainer.name}}</a></h3>
+							<span>{{trainer.bio}}</span>
+							<span>{{trainer.years_of_experience}}</span>
 						</div>
 						<div class="desc text-center">
 							<ul class="fh5co-social-icons">
@@ -46,12 +48,17 @@
 						</div>
 					</div>
 				</div>
+				{% endfor %}
+								<!-- {% for trainer in trainers %}
 				<div class="col-md-4 col-sm-4 animate-box">
 					<div class="trainer">
-						<a href="#"><img class="img-responsive" src="images/trainer-2.jpg" alt="trainer"></a>
+						<a href="#"><img class="img-responsive" src="images/trainer-1.jpg" alt="trainer"></a>
+
+					
 						<div class="title">
-							<h3><a href="#">Arnold Smith</a></h3>
-							<span>Body Building Expert</span>
+							<h3><a href="#">{{trainer.name}}</a></h3>
+							<span>{{trainer.bio}}</span>
+							<span>{{trainer.years_of_experience}}</span>
 						</div>
 						<div class="desc text-center">
 							<ul class="fh5co-social-icons">
@@ -63,23 +70,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-4 animate-box">
-					<div class="trainer">
-						<a href="#"><img class="img-responsive" src="images/trainer-3.jpg" alt="trainer"></a>
-						<div class="title">
-							<h3><a href="#">Rachel Seely</a></h3>
-							<span>Yoga Expert</span>
-						</div>
-						<div class="desc text-center">
-							<ul class="fh5co-social-icons">
-								<li><a href="#"><i class="icon-twitter"></i></a></li>
-								<li><a href="#"><i class="icon-facebook"></i></a></li>
-								<li><a href="#"><i class="icon-linkedin"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
+				{% endfor %}!-->
+		
+
 			</div>
 		</div>
 	</div>
