fixing reset password and trainer photo

--- a/HealthClub/templates/password_reset/password_reset_done.html
+++ b/HealthClub/templates/password_reset/password_reset_done.html
@@ -7,8 +7,8 @@
 
 
 
-{% block main %}
-<div class="container py-5">
+{% block body %}
+<div style="margin: 5%;">
     <div class="row">
 
         <h3>Password reset complete!</h3>
