--- a/HealthClub/templates/password_reset/password_reset_sent.html
+++ b/HealthClub/templates/password_reset/password_reset_sent.html
@@ -9,8 +9,8 @@
 
 
 
-{% block main %}
-<div class="container py-5">
+{% block body %}
+<div style="margin: 5%;">
   <div class="row">
     <h1>Sent!</h1>
     <p>
