--- a/HealthClub/templates/physio-slim/branch.html
+++ b/HealthClub/templates/physio-slim/branch.html
@@ -73,7 +73,7 @@
                 {% for trainer in trainers %}
                     <div class="col-md-4 col-sm-4 animate-box">
                         <div class="trainer">
-                            <a href="#"><img class="img-responsive" src="{{MEDIA_URL}}/{{PersonalTrainer.photo}}" alt="trainer"></a>
+                            <a href="#"><img class="img-responsive" src="{{MEDIA_URL}}/{{trainer.photo}}" alt="trainer"></a>
                             <div class="title">
                                 <h3><a href="#">{{trainer.name}}</a></h3>
                                 <span>{{trainer.bio}}</span>
