--- a/HealthClub/templates/password_reset/password_reset.html
+++ b/HealthClub/templates/password_reset/password_reset.html
@@ -2,20 +2,19 @@
 {% load static %}
 
 {% block head %}
-<title>Reset password</title>
-{% endblock %}
+{% endblock %}  
 
 
 
-{% block main %}
-<div class="container py-5">
+{% block body %} 
+<div class="container" style="margin: 5%;">
   <div class="row">
-    <h3>Reset your password</h3>
+    <h3 class="tex-danger">Reset your password</h3>
     <p>
       Forgotten your password? Enter your email address below, and we'll email
       you instructions for setting a new one.
     </p>
-    <form method="post">
+    <form method="post" >
       {% csrf_token %} {{ form.as_p }}
       <button type="submit" name="send email" class="btn btn-primary">send email</button>
     </form>
