--- a/HealthClub/templates/password_reset/password_reset_form.html
+++ b/HealthClub/templates/password_reset/password_reset_form.html
@@ -6,8 +6,8 @@
 {% endblock %}
 
 
-{% block main %}
-<div class="container py-5">
+{% block body %}
+<div style="margin: 5%;">
   <h3>Enter your new password</h3>
 <p>
     Please enter your password twice so we can verify that your typed it in correctly
