--- a/HealthClub/templates/physio-slim/branch.html
+++ b/HealthClub/templates/physio-slim/branch.html
@@ -79,19 +79,16 @@
                                 <span>{{trainer.bio}}</span>
                                 <span>{{trainer.years_of_experience}}</span>
                             </div>
-                            <div class="desc text-center">
-                                <ul class="fh5co-social-icons">
-                                    <li><a href="#"><i class="icon-twitter"></i></a></li>
-                                    <li><a href="#"><i class="icon-facebook"></i></a></li>
-                                    <li><a href="#"><i class="icon-linkedin"></i></a></li>
-                                    <li><a href="#"><i class="icon-dribbble"></i></a></li>
-                                </ul>
-                            </div>
                         </div>
                     </div>
                 {% endfor %}
-				
+
 			</div>
+			<p style="padding-top: 1%;">
+				<a href="{% url 'trainers' 1 %}" class="btn btn-primary btn-outline btn-sm"> 
+					More <i class="icon-arrow-right"></i>
+				</a>
+			</p>
 		</div>
 	</div>
 	<div id="fh5co-pricing">
