--- a/HealthClub/templates/physio-slim/trainers.html
+++ b/HealthClub/templates/physio-slim/trainers.html
@@ -30,22 +30,15 @@
 			</div>
 			<div class="row">
 				{% for trainer in trainers %}
-				<div class="col-md-4 col-sm-4 animate-box">
+				<div class="col-md-4 col-sm-4 animate-box" style="padding-bottom: 5%;">
 					<div class="trainer">
-						<a href="#"><img class="img-responsive" src="images/trainer-1.jpg" alt="trainer"></a>
+						<a href="#"><img class="img-responsive" src="{{MEDIA_URL}}/{{trainer.photo}}" alt="trainer"></a>
 						<div class="title">
 							<h3><a href="#">{{trainer.name}}</a></h3>
 							<span>{{trainer.bio}}</span>
 							<span>{{trainer.years_of_experience}}</span>
 						</div>
-						<div class="desc text-center">
-							<ul class="fh5co-social-icons">
-								<li><a href="#"><i class="icon-twitter"></i></a></li>
-								<li><a href="#"><i class="icon-facebook"></i></a></li>
-								<li><a href="#"><i class="icon-linkedin"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							</ul>
-						</div>
+	
 					</div>
 				</div>
 				{% endfor %}
