--- a/HealthClub/templates/physio-slim/index.html
+++ b/HealthClub/templates/physio-slim/index.html
@@ -4,7 +4,7 @@
 	<div class="fh5co-loader"></div>
 	
 	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(static/images/img.jpg);" data-stellar-background-ratio="0.5">
-        <video autoplay muted loop id="bg-video">
+        <video autoplay loop id="bg-video">
             <source src="{% static 'videos/intro.mp4' %}" type="video/mp4" />
         </video>
 		<div class="overlay">
