renaming class photos fields

--- a/HealthClub/templates/physio-slim/branch.html
+++ b/HealthClub/templates/physio-slim/branch.html
@@ -29,7 +29,7 @@
 				{% for class in classes %}
 				<div class="col-md-4 text-center animate-box">
 					<div class="services">
-						<span><img class="img-responsive" src="{{MEDIA_URL}}/{{class.photo}} "  alt="hello"></span>
+						<span><img class="img-responsive" src="{{MEDIA_URL}}/{{class.icon}}"  alt="hello"></span>
                         
 						<h3> {{class.Class}}</h3>
 						
