--- a/HealthClub/PhysioSlim/static/css/login.css
+++ b/HealthClub/PhysioSlim/static/css/login.css
@@ -1,67 +1,117 @@
+@import "compass/css3";
 
-body,
-html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    background: #dcdde1b6 !important;
-
+body {
+  background:#333 !important;
 }
 
-.user_card {
-    width: 400px;
-    margin-top: auto;
-    margin-bottom: auto;
-    background: #050301ce;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 5px;
-    box-shadow: 20px 20px 50px #050301d0;
+a{
+    text-decoration: none !important;
+}
+form {
+ 	background:#111; 
+    width:80%;
+    margin:30px auto;
+    border-radius:0.4em;
+    border:1px solid #191919;
+    overflow:hidden;
+    position:relative;
+    box-shadow: 0 5px 10px 5px rgba(0,0,0,0.2);
+    font-size:1.5rem !important;
+
 }
 
-.form_container {
-    margin-top: 20px;
+
+.inset {
+    padding:20px; 
+    border-top:1px solid #19191a;
 }
 
-#form-title{
-    color: #fff;
-    
+form h1 {
+  color:#fff;
+  text-align:center;
+  padding:15px 0;
+  position:relative;
 }
 
-.login_btn {
-    width: 100%;
-    background: #0d6dfd9f !important;
-    color: white !important;
-}
-.login_btn:focus {
-    box-shadow: none !important;
-    outline: 0px !important;
-}
-.login_container {
-    padding: 0 2rem;
-}
-.input-group-text {
-    background: #fde303 !important;
-    color: white !important;
-    border: 0 !important;
-    border-radius: 0.25rem 0 0 0.25rem !important;
-}
-.input_user,
-.input_pass:focus {
-    box-shadow: none !important;
-    outline: 0px !important;
+form h1:after {
+ 	content:"";
+    display:block;
+    position:absolute;
+    top:0;
+    left:50px;
+    pointer-events:none;
+    transform:rotate(70deg);
+    background:linear-gradient(50deg, rgba(255,255,255,0.15), rgba(0,0,0,0));
+  
 }
 
-#messages{
-    color: white;
-    border-radius: 5px;
-    padding: 5px;
-    margin-top: 10px;
-    font-size: medium;
+label {
+ 	color:#666;
+    display:block;
+    padding-bottom:9px;
+}
+
+input[type=text],
+input[type=password] {
+ 	width:100%;
+    padding:8px 5px;
+    background:linear-gradient(#1f2124, #27292c);
+    border:1px solid #222;
+    box-shadow:
+        0 1px 0 rgba(255,255,255,0.1);
+    border-radius:0.3em;
+    margin-bottom:20px;
+}
+
+label[for=remember]{
+ 	color:white;
+    display:inline-block;
+    padding-bottom:0;
+    padding-top:5px;
+}
+
+input[type=checkbox] {
+ 	display:inline-block;
+  vertical-align:top;
+}
+
+.p-container {
+ 	padding:0 20px 20px 20px; 
+}
+
+.p-container:after {
+ 	clear:both;
+  display:table;
+  content:"";
+}
+
+.forget {
+  color:#0d93ff !important;
+}
+
+input[type=submit] {
+ 	padding:5px 20px;
+  border:1px solid rgba(0,0,0,0.4);
+  text-shadow:0 -1px 0 rgba(0,0,0,0.4);
+  box-shadow:
+    inset 0 1px 0 rgba(255,255,255,0.3),
+    inset 0 10px 10px rgba(255,255,255,0.1);
+  border-radius:0.3em;
+  background:#fde403;
+  color:#000;
+  float:right;
+  cursor:pointer;
+}
+
+input[type=submit]:hover {
+  box-shadow:
+    inset 0 1px 0 rgba(255,255,255,0.3),
+    inset 0 -10px 10px rgba(255,255,255,0.1);
+}
+
+input[type=text]:hover,
+input[type=password]:hover,
+label:hover ~ input[type=text],
+label:hover ~ input[type=password] {
+ 	background:#27292c;
 }
