--- a/HealthClub/PhysioSlim/static/css/login.css
+++ b/HealthClub/PhysioSlim/static/css/login.css
@@ -86,19 +86,19 @@ input[type=checkbox] {
 }
 
 .forget {
-  color:#0d93ff !important;
+  color:#fff !important;
+  text-decoration: underline !important;
 }
 
 input[type=submit] {
  	padding:5px 20px;
-  border:1px solid rgba(0,0,0,0.4);
-  text-shadow:0 -1px 0 rgba(0,0,0,0.4);
+  border:none;
   box-shadow:
     inset 0 1px 0 rgba(255,255,255,0.3),
     inset 0 10px 10px rgba(255,255,255,0.1);
   border-radius:0.3em;
   background:#fde403;
-  color:#000;
+  color:#4d4d4d;
   float:right;
   cursor:pointer;
 }
