--- a/HealthClub/templates/physio-slim/main.html
+++ b/HealthClub/templates/physio-slim/main.html
@@ -99,7 +99,12 @@
                                         <li><a href="/admin/" target="_blank">Manage site </a></li>
                                         <li><a href="{% url 'logout' %}">Logout</a></li>
 										{% else %}
-										<li><a href="{% url 'logout' %}">Logout</a></li>
+											{% if request.user.is_subscribed %}
+												<li><a href="#">Favorites</a></li>
+												<li><a href="{% url 'logout' %}">Logout</a></li>
+											{% else %}
+												<li><a href="{% url 'logout' %}">Logout</a></li>
+											{% endif %}
 										{% endif %}
                                     </ul>
                                 </li>
