--- a/HealthClub/templates/physio-slim/main.html
+++ b/HealthClub/templates/physio-slim/main.html
@@ -112,6 +112,26 @@
     <!-- End Navigation -->
 
         {% block body %} {% endblock %}
+	<!-- offer  -->
+	<div id="fh5co-started" class="fh5co-bg" style="background-image: url(images/img_bg_3.jpg);">
+		<div class="overlay"></div>
+		<div class="container">
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center">
+					<h2>Fitness Classes this Summer <br> <span> Pay Now and <br> Get <span class="percent">35%</span> Discount</span></h2>
+				</div>
+			</div>
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center">
+					{% if request.user.is_anonymous %}
+                    <p><a class="btn btn-default btn-lg" href="{% url 'register' %}">Become A Member</a></p>
+                    {% endif %}
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- end offer -->
+	
     <!-- Footer -->
 	<footer id="fh5co-footer" class="fh5co-bg" style="background-image: url(images/img_bg_1.jpg);" role="contentinfo">
 		<div class="overlay"></div>
@@ -177,6 +197,12 @@
 
 		</div>
 	</footer>
+
+	<div class="gototop js-top">
+		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
+	</div>
+
+	
     <!-- End Footer -->
     <!-- jQuery -->
 	<script src="{% static 'js/jquery.min.js' %}"></script>
