--- a/HealthClub/templates/physio-slim/index.html
+++ b/HealthClub/templates/physio-slim/index.html
@@ -4,7 +4,7 @@
 	<div class="fh5co-loader"></div>
 <!-- vedio -->
 	<header id="fh5co-header" class="fh5co-cover" role="banner" data-stellar-background-ratio="0.5">
-        <video autoplay loop id="bg-video">
+        <video autoplay muted loop id="bg-video">
             <source src="{% static 'videos/intro.mp4' %}" type="video/mp4" />
         </video>
 		<div class="overlay">
@@ -14,8 +14,6 @@
                         <div class="display-t">
                             <div class="display-tc animate-box" data-animate-effect="fadeIn">
                                 <h1>Make it a lifestyle not a duty</h1>
-                                <h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
-                                <p><a href="https://vimeo.com/channels/staffpicks/93951774" class="btn btn-primary popup-vimeo">Watch Our Video</a></p>
                             </div>
                         </div>
                     </div>
