--- a/HealthClub/templates/physio-slim/branch.html
+++ b/HealthClub/templates/physio-slim/branch.html
@@ -1,10 +1,10 @@
 {% extends 'physio-slim/main.html' %}
 {% load static %}
 {% block body %}
-	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(static/images/img.jpg);" data-stellar-background-ratio="0.5">
-        <video autoplay muted loop id="bg-video">
-            <source src=0% static 'images/intro.mp4' %}" type="video/mp4" />
-        </video>
+<header id="fh5co-header" class="fh5co-cover" role="banner" data-stellar-background-ratio="0.5">
+<video autoplay muted loop id="bg-video">
+	<source src="{% static 'videos/intro.mp4' %}" type="video/mp4" />
+    </video>
 		<div class="overlay">
             <div class="container">
                 <div class="row">
@@ -12,7 +12,7 @@
                         <div class="display-t">
                             <div class="display-tc animate-box" data-animate-effect="fadeIn">
                                 <h1> Physio Slim </h1>
-                                <p><a href="https://vimeo.com/channels/staffpicks/93951774" class="btn btn-primary popup-vimeo">Watch Our Video</a></p>
+                                
                             </div>
                         </div>
                     </div>
@@ -23,18 +23,20 @@
 	</header>
 
 <!-- Classes  -->
+	<div class="container">
+
 	<div id="fh5co-services" class="fh5co-bg-section">
 		<div class="container">
+
 			<div class="row">
-				{% for class in classes%}
+				{% for class in classes %}
 				<div class="col-md-4 text-center animate-box">
 					<div class="services">
-						<span><img class="img-responsive" src="{{MEDIA_URL}}/{{class.icon}}"  alt="hello"></span>
+						<span><img class="img-responsive" src="{{MEDIA_URL}}/{{class.icon }}"  alt="class"></span>
                         
 						<h3> {{class.Class}}</h3>
 						
 						<p>{{class.description}}</p>
-						<p><a href="{% url 'classes' branch.id %}" class="btn btn-primary btn-outline btn-sm">More <i class="icon-arrow-right"></i></a></p>
 					</div>
 				</div>
 				{% endfor %}
@@ -173,88 +175,10 @@
 						</div>
 					</div>
 				</div>
+				{% endfor %}
 			</div>
 		</div>
 	</div>
 
-	<div id="fh5co-gallery">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<h2>Gym gallery</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-				</div>
-			</div>
-		</div>
-		<div class="container-fluid">
-			<div class="row row-bottom-padded-md">
-				<div class="col-md-12">
-					<ul id="fh5co-portfolio-list">
-
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpg); ">
-							<a href="#">
-								<div class="case-studies-summary">
-									<span>Illustration</span>
-									<h2>Useful baskets</h2>
-								</div>
-							</a>
-						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
-							<a href="#">
-								<div class="case-studies-summary">
-									<span>Web Design</span>
-									<h2>Skater man in the road</h2>
-								</div>
-							</a>
-						</li>
-
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
-							<a href="#">
-								<div class="case-studies-summary">
-									<span>Web Design</span>
-									<h2>Two Glas of Juice</h2>
-								</div>
-							</a>
-						</li>
-
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-4.jpg); "> 
-							<a href="#">
-								<div class="case-studies-summary">
-									<span>Web Design</span>
-									<h2>Timer starts now!</h2>
-								</div>
-							</a>
-						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
-							<a href="#">
-								<div class="case-studies-summary">
-									<span>Web Design</span>
-									<h2>Two Glas of Juice</h2>
-								</div>
-							</a>
-						</li>
-						<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-5.jpg); ">
-							<a href="#">
-								<div class="case-studies-summary">
-									<span>Illustration</span>
-									<h2>Beautiful sunset</h2>
-								</div>
-							</a>
-						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
-							<a href="#">
-								<div class="case-studies-summary">
-									<span>Web Design</span>
-									<h2>Two Glas of Juice</h2>
-								</div>
-							</a>
-						</li>
-					</ul>		
-				</div>
-			</div>
-		</div>
-	</div>
 	
-
-
 	{% endblock %}
