--- a/HealthClub/PhysioSlim/static/css/login.css
+++ b/HealthClub/PhysioSlim/static/css/login.css
@@ -31,19 +31,9 @@ form h1 {
   text-align:center;
   padding:15px 0;
   position:relative;
+  margin: 0;
 }
 
-form h1:after {
- 	content:"";
-    display:block;
-    position:absolute;
-    top:0;
-    left:50px;
-    pointer-events:none;
-    transform:rotate(70deg);
-    background:linear-gradient(50deg, rgba(255,255,255,0.15), rgba(0,0,0,0));
-  
-}
 
 label {
  	color:#666;
@@ -51,8 +41,7 @@ label {
     padding-bottom:9px;
 }
 
-input[type=text],
-input[type=password] {
+p input, select{
  	width:100%;
     padding:8px 5px;
     background:linear-gradient(#1f2124, #27292c);
@@ -90,28 +79,45 @@ input[type=checkbox] {
   text-decoration: underline !important;
 }
 
-input[type=submit] {
- 	padding:5px 20px;
-  border:none;
-  box-shadow:
-    inset 0 1px 0 rgba(255,255,255,0.3),
-    inset 0 10px 10px rgba(255,255,255,0.1);
-  border-radius:0.3em;
-  background:#fde403;
-  color:#4d4d4d;
-  float:right;
-  cursor:pointer;
-}
 
-input[type=submit]:hover {
-  box-shadow:
-    inset 0 1px 0 rgba(255,255,255,0.3),
-    inset 0 -10px 10px rgba(255,255,255,0.1);
-}
 
-input[type=text]:hover,
-input[type=password]:hover,
-label:hover ~ input[type=text],
-label:hover ~ input[type=password] {
+p input:hover,
+p select:hover,
+p label:hover ~ input,
+p label:hover ~ select {
  	background:#27292c;
+}
+
+/* .submit {
+  padding:5px 20px;
+ border:none;
+ box-shadow:
+   inset 0 1px 0 rgba(255,255,255,0.3),
+   inset 0 10px 10px rgba(255,255,255,0.1);
+ border-radius:0.3em;
+ background:#fde403;
+ color:#4d4d4d;
+ float:right;
+ cursor:pointer;
+} */
+input[type="file"] {
+  display: none;
+}
+.custom-file-upload {
+  border: 1px solid #ccc;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+}
+
+.submit{
+
+  float: right;
+  background:#fde403;
+
+}
+.submit:hover {
+ box-shadow:
+   inset 0 1px 0 rgba(255,255,255,0.3),
+   inset 0 -10px 10px rgba(255,255,255,0.1);
 }
