--- a/HealthClub/templates/physio-slim/main.html
+++ b/HealthClub/templates/physio-slim/main.html
@@ -1,6 +1,4 @@
-
 {% load static %}
-
 {% load custom_tags %}
 <!DOCTYPE HTML>
 <html>
@@ -117,7 +115,7 @@
 									</ul>
 								</li>
 								{% block bell %}
-								{% include 'physio-slim/bell.html' %}
+								{% include 'physio-slim/show_notifications.html' %}
 								{% endblock %}
 								
                                 {% endif %}
