--- a/HealthClub/templates/physio-slim/login.html
+++ b/HealthClub/templates/physio-slim/login.html
@@ -30,7 +30,7 @@
 				</div>
 				
 				<p class="p-container">
-					<input class="" type="submit" value="Login">
+					<input class="submit" type="submit" value="Login">
 				</p>
 				</form>
 			
