--- a/HealthClub/templates/physio-slim/verify.html
+++ b/HealthClub/templates/physio-slim/verify.html
@@ -10,14 +10,15 @@
 <div class="container" style="margin: 5%;">
   <div class="row">
     <h1>Verify your account</h1>
-    <form method="post">
+    <form method="post" style="margin: auto;" action="{% url 'verify-code' %}">
       {% csrf_token %}
-      {{ form.as_p }}
-      <button type="submit" name="send email" class="btn btn-primary">Verify</button>
+      <input type="text" name="code" maxlength="8" required="" id="id_code">  
+      <br><br> 
+      <p class="text-danger">  {{error}}</p>
+      <a href="{% url 're-verify' %}" class="text-dark">Send again?</a>
 
+      <button type="submit" name="send email" class="btn btn-primary" >Verify</button>
     </form>
-    <a href="{% url 're-verify' %}">Send again</a>
-   
     
   </div>
 </div>
